--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -8,31 +8,8 @@
     android:orientation="vertical"
     tools:context=".modules.entry.fragment.MyFragment">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/title_bar_height">
 
-        <ImageView
-            android:id="@+id/iv_set"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/iv_message"
-            android:paddingLeft="@dimen/small"
-            android:paddingRight="@dimen/small"
-            android:src="@drawable/ic_set" />
-
-        <ImageView
-            android:id="@+id/iv_message"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:paddingLeft="@dimen/small"
-            android:paddingRight="@dimen/medium"
-            android:src="@drawable/ic_message" />
-    </RelativeLayout>
-
+    <!--未登录状态不可用（除了客服），点击功能进入用户登录页-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,6 +21,31 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!--设置 未登录状态，可操作项包括：1.通用，除“工具箱/跟帖消息推送”（变灰或屏蔽）外的其他项。（图054）2.关于我们（图055）；3.其他项屏蔽。-->
+                <ImageView
+                    android:id="@+id/iv_set"
+                    android:layout_width="@dimen/dp_40"
+                    android:layout_height="@dimen/dp_40"
+                    android:layout_gravity="left"
+                    android:paddingLeft="@dimen/small"
+                    android:paddingRight="@dimen/small"
+                    android:src="@drawable/ic_set" />
+
+                <!--消息，未登录状态不可用，点击进入用户登录页-->
+                <ImageView
+                    android:id="@+id/iv_message"
+                    android:layout_width="@dimen/dp_40"
+                    android:layout_height="@dimen/dp_40"
+                    android:layout_gravity="right"
+                    android:paddingLeft="@dimen/small"
+                    android:paddingRight="@dimen/small"
+                    android:src="@drawable/ic_message" />
+
+            </FrameLayout>
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -205,7 +207,7 @@
                 android:id="@+id/grid_tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:overScrollMode="never" />
+                 />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
