--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,40 @@
         <item name="android:windowBackground">@drawable/def_splash</item>
     </style>
 
+    <!--标题样式-->
+    <style name="title_title">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp_44</item>
+        <item name="android:background">@color/main_white</item>
+    </style>
+
+    <style name="title_back">
+        <item name="android:id">@id/title_back</item>
+        <item name="android:layout_width">@dimen/dp_38</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:padding">@dimen/dp_15</item>
+        <item name="android:src">@drawable/ic_back_arrow</item>
+    </style>
+
+    <style name="title_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/text_black</item>
+        <item name="android:textSize">@dimen/sp_18</item>
+    </style>
+
+    <style name="title_right">
+        <item name="android:id">@id/title_right</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingRight">@dimen/dp_15</item>
+        <item name="android:layout_gravity">center_vertical|right</item>
+        <item name="android:textColor">@color/text_gray</item>
+        <item name="android:textSize">@dimen/sp_14</item>
+    </style>
+
+
 
     <!--主按钮中号-->
     <style name="MainButtonMedium">
