--- a/app/src/main/res/layout/activity_good_detail.xml
+++ b/app/src/main/res/layout/activity_good_detail.xml
@@ -22,6 +22,8 @@
             style="@style/title_more_black"/>
     </FrameLayout>
 
+    <include layout="@layout/view_split_bar_light"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/good_detail_pager"
         android:layout_width="match_parent"
