--- a/app/src/main/res/layout/view_split_bar_light.xml
+++ b/app/src/main/res/layout/view_split_bar_light.xml
@@ -2,7 +2,7 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="@dimen/dp_0.5"
-      android:background="@color/grey_200"
+      android:background="@color/bg"
       android:layout_gravity="bottom"
       android:layout_alignParentBottom="true"
     />
