--- a/app/src/main/res/layout/activity_my_order.xml
+++ b/app/src/main/res/layout/activity_my_order.xml
@@ -28,6 +28,8 @@
         android:layout_height="wrap_content"
         />
 
+    <include layout="@layout/view_split_bar_light"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/myorder_pager"
         android:layout_width="match_parent"
