--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -7,11 +7,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_40">
+        android:layout_height="@dimen/dp_40"
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingRight="@dimen/dp_10"
+        android:background="@color/white"
+        android:gravity="center_vertical">
+
         <cn.czyugang.tcg.client.widget.SelectButton
+            android:id="@+id/item_select"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
         <TextView
+            android:id="@+id/item_store_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
@@ -20,6 +29,95 @@
             android:text="店铺称名"
             android:textColor="@color/text_black"
             android:textSize="@dimen/sp_14"
+            />
+
+        <TextView
+            android:id="@+id/item_status"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="待发货"
+            android:textColor="@color/text_dark_gray"
+            android:textSize="@dimen/sp_14"
+            />
+    </LinearLayout>
+
+    <include layout="@layout/view_split_bar_light"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/item_list"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_80"
+        android:visibility="gone"
+        android:background="@color/white"
+        />
+
+    <!--单种商品-->
+    <include
+        android:id="@+id/item_list_one"
+        layout="@layout/view_item_good"/>
+
+    <include layout="@layout/view_split_bar_light"/>
+
+    <TextView
+        android:id="@+id/item_count"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_40"
+        android:background="@color/white"
+        android:gravity="center_vertical|right"
+        android:paddingRight="@dimen/dp_10"
+        android:text="共10件商品   实付款：￥64.00 (含配送费 ￥3.00)"
+        android:textColor="@color/text_dark_gray"
+        android:textSize="@dimen/sp_14"
+        />
+
+    <include layout="@layout/view_split_bar_light"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_56"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:paddingRight="@dimen/dp_5">
+
+        <include layout="@layout/space_h"/>
+
+        <TextView
+            android:id="@+id/item_button_one"
+            android:layout_width="@dimen/dp_68"
+            android:layout_height="@dimen/dp_22"
+            android:layout_marginRight="@dimen/dp_5"
+            android:background="@drawable/border_rect_black"
+            android:gravity="center"
+            android:text="删除订单"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/sp_12"
+            />
+
+        <TextView
+            android:id="@+id/item_button_two"
+            android:layout_width="@dimen/dp_68"
+            android:layout_height="@dimen/dp_22"
+            android:layout_marginRight="@dimen/dp_5"
+            android:background="@drawable/border_rect_black"
+            android:gravity="center"
+            android:text="删除订单"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/sp_12"
+            />
+
+        <TextView
+            android:id="@+id/item_button_three"
+            android:layout_width="@dimen/dp_68"
+            android:layout_height="@dimen/dp_22"
+            android:layout_marginRight="@dimen/dp_5"
+            android:background="@drawable/border_rect_black"
+            android:gravity="center"
+            android:text="删除订单"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/sp_12"
             />
     </LinearLayout>
 
