--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="text_black">#333</color>
     <color name="text_dark_gray">#666</color>
     <color name="text_gray">#999</color>
+    <color name="text_middle_gray">#aaa</color>
     <color name="text_light_gray">#ccc</color>
     <color name="text_white">#fff</color>
     <color name="text_orange">#bd864e</color>
