--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -86,6 +86,89 @@
     </style>
 
 
+    <!--    item    40dp    -->
+    <style name="item_40_group">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp_40</item>
+        <item name="android:paddingLeft">@dimen/dp_10</item>
+        <item name="android:paddingRight">@dimen/dp_10</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="item_40_img">
+        <item name="android:layout_width">@dimen/dp_14</item>
+        <item name="android:layout_height">@dimen/dp_14</item>
+        <item name="android:layout_marginRight">@dimen/dp_6</item>
+        <item name="android:src">@drawable/icon_shop</item>
+    </style>
+
+
+    <style name="item_40_name">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:drawablePadding">@dimen/dp_6</item>
+        <item name="android:text">店铺名称</item>
+        <item name="android:textColor">@color/text_black</item>
+        <item name="android:textSize">@dimen/sp_14</item>
+    </style>
+
+    <style name="item_40_arrow">
+        <item name="android:layout_width">@dimen/dp_14</item>
+        <item name="android:layout_height">@dimen/dp_14</item>
+        <item name="android:src">@drawable/ic_goto_arrow</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
+
+
+    <!--文字按钮-->
+    <style name="button_100">
+        <item name="android:layout_width">@dimen/dp_100</item>
+        <item name="android:layout_height">@dimen/dp_36</item>
+        <item name="android:layout_marginRight">@dimen/dp_10</item>
+        <item name="android:background">@drawable/border_rect_black</item>
+        <item name="android:gravity">center</item>
+        <item name="android:text">删除订单</item>
+        <item name="android:textSize">@dimen/sp_14</item>
+        <item name="android:textColor">@color/text_dark_gray</item>
+    </style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!--图标-->
     <style name="icon_15">
         <item name="android:layout_width">@dimen/dp_15</item>
