--- a/app/src/main/res/layout/activity_select_location.xml
+++ b/app/src/main/res/layout/activity_select_location.xml
@@ -8,27 +8,44 @@
     android:orientation="vertical"
     tools:context=".modules.address.activity.SelectLocationActivity">
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/title"
+        style="@style/title_title">
+
+        <ImageView
+            style="@style/title_back"/>
+
+        <TextView
+            android:id="@+id/title_text"
+            style="@style/title_text"
+            android:text="入驻申请"/>
+    </FrameLayout>
+    <include
+        android:id="@+id/title_bar"
+        layout="@layout/view_split_bar_light"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_bar_height"
-        android:background="@color/main_white">
+        android:background="@color/main_white"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/medium"
-            android:paddingRight="@dimen/small"
+
             android:src="@drawable/ic_back_arrow" />
 
         <EditText
             android:id="@+id/et_search"
             android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:layout_toLeftOf="@+id/tv_cancel"
-            android:layout_toRightOf="@+id/iv_back"
+            android:layout_marginLeft="@dimen/dp_10"
             android:background="@drawable/bg_search_edit"
             android:drawableLeft="@drawable/ic_search"
             android:drawablePadding="@dimen/medium"
@@ -48,7 +65,6 @@
             android:id="@+id/tv_cancel"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/small"
             android:paddingRight="@dimen/medium"
@@ -56,12 +72,13 @@
             android:textColor="@color/text_dark_gray"
             android:textSize="@dimen/text_small" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/divider"
-            android:layout_alignParentBottom="true"
-            android:background="@color/div_dark" />
-    </RelativeLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/divider"
+        android:layout_alignParentBottom="true"
+        android:background="@color/div_dark" />
 
     <RelativeLayout
         android:layout_width="match_parent"
