--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/homepage_search"
+        style="@style/search_edit"
+        android:focusable="false"
+        android:inputType="text"
+        />
 
     <TextView
         android:id="@+id/homepage_store1"
@@ -14,6 +23,7 @@
         android:gravity="center"
         android:text="店铺：919122791461220353"
         />
+
     <TextView
         android:id="@+id/homepage_store2"
         android:layout_width="@dimen/dp_180"
@@ -24,6 +34,7 @@
         android:gravity="center"
         android:text="店铺：930278266785427456"
         />
+
     <TextView
         android:id="@+id/homepage_store3"
         android:layout_width="@dimen/dp_180"
@@ -36,14 +47,13 @@
         />
 
 
-
     <TextView
         android:id="@+id/homepage_order"
         android:layout_width="@dimen/dp_180"
         android:layout_height="@dimen/dp_40"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/dp_40"
         android:background="@color/main_white"
-        android:layout_gravity="center"
         android:gravity="center"
         android:text="确认订单"
         />
@@ -52,9 +62,9 @@
         android:id="@+id/homepage_aftersale_list"
         android:layout_width="@dimen/dp_180"
         android:layout_height="@dimen/dp_40"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/dp_40"
         android:background="@color/main_white"
-        android:layout_gravity="center"
         android:gravity="center"
         android:text="售后申请列表"
         />
@@ -63,9 +73,9 @@
         android:id="@+id/homepage_aftersale_service"
         android:layout_width="@dimen/dp_180"
         android:layout_height="@dimen/dp_40"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/dp_8"
         android:background="@color/main_white"
-        android:layout_gravity="center"
         android:gravity="center"
         android:text="售后服务"
         />
