--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,9 +4,11 @@
         <attr name="horizontal_spacing" format="dimension" />
         <attr name="vertical_spacing" format="dimension" />
         <attr name="line_count" format="integer"/>
+        <attr name="column_count" format="integer"/>
     </declare-styleable>
     <declare-styleable name="LabelLayout">
         <attr name="child_layout" format="reference"/>
+        <attr name="show_type" format="string"/>
     </declare-styleable>
 
     <declare-styleable name="ActivityTextView">
