--- a/app/src/main/res/layout/item_search_result_store.xml
+++ b/app/src/main/res/layout/item_search_result_store.xml
@@ -4,8 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/dp_20"
-    android:paddingLeft="@dimen/dp_10"
-    android:paddingRight="@dimen/dp_10"
     android:paddingTop="@dimen/dp_18"
     >
 
@@ -72,12 +70,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/item_img"
         android:layout_toRightOf="@id/item_img"
+        android:orientation="vertical"
         />
     
     <android.support.v7.widget.RecyclerView
         android:id="@+id/item_goods"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_80"
+        android:layout_height="@dimen/dp_86"
         android:layout_below="@id/item_activities"
         android:layout_toRightOf="@id/item_img"
         />
