--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -6,11 +6,42 @@
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/homepage_search"
-        style="@style/search_edit"
-        android:focusable="false"
-        android:inputType="text"
+    <LinearLayout
+        style="@style/title_title"
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingRight="@dimen/dp_10">
+
+        <TextView
+            android:id="@+id/homepage_location"
+            style="@style/text_14_dark_gray"
+            android:layout_gravity="center_vertical"
+            android:drawableRight="@drawable/icon_arrow_down"
+            android:drawablePadding="@dimen/dp_2"
+            android:text="潮州"
+            />
+        
+        <EditText
+            android:id="@+id/homepage_search"
+            style="@style/search_edit"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:focusable="false"
+            android:inputType="text"
+            />
+
+        <ImageView
+            android:id="@+id/homepage_scan"
+            android:layout_width="@dimen/dp_20"
+            android:layout_height="@dimen/dp_20"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/scan_code"
+            />
+    </LinearLayout>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/homepage_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         />
 
     <TextView
@@ -78,6 +109,12 @@
         android:background="@color/main_white"
         android:gravity="center"
         android:text="售后服务"
+        />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/homepage_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         />
 
 </LinearLayout>
