--- a/app/src/main/res/drawable/bg_rect_cir_grey_ccc.xml
+++ b/app/src/main/res/drawable/bg_rect_cir_grey_ccc.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
 >
-    <corners android:radius="2dp"/>
-    <stroke android:width="@dimen/dp_0.5" android:color="@color/grey_350"/>
+    <solid android:color="#ccc"/>
+    <corners android:radius="@dimen/dp_60"/>
 
 </shape>
