--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -89,6 +89,17 @@
             android:paddingLeft="@dimen/dp_10"
             android:paddingRight="@dimen/dp_10"
             />
+        
+        <Button
+            android:id="@+id/search_list_to_top"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
+            android:background="@drawable/icon_list_to_top"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="@dimen/dp_30"
+            android:layout_marginRight="@dimen/dp_8"
+            />
+        
         <!--类型-->
         <LinearLayout
             android:id="@+id/search_typeL"
