--- a/app/src/main/res/layout/item_search_result_store.xml
+++ b/app/src/main/res/layout/item_search_result_store.xml
@@ -4,21 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/dp_20"
-    android:paddingTop="@dimen/dp_18"
     >
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0.5"
+        android:background="@color/bg"/>
 
     <cn.czyugang.tcg.client.utils.img.ImgView
         android:id="@+id/item_img"
         android:layout_width="@dimen/dp_70"
         android:layout_height="@dimen/dp_70"
         android:layout_marginRight="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_2"
+        android:layout_marginTop="@dimen/dp_20"
         />
 
     <TextView
         android:id="@+id/item_name"
         style="@style/text_16_black"
         android:layout_marginBottom="@dimen/dp_6"
+        android:layout_marginTop="@dimen/dp_18"
         android:layout_toRightOf="@id/item_img"
         android:text="店铺名称称称成"
         />
@@ -27,6 +32,7 @@
         android:id="@+id/item_sale"
         style="@style/text_12_gray"
         android:layout_alignParentRight="true"
+        android:layout_alignBaseline="@id/item_name"
         android:text="30分钟 | 1.25 km"
         />
 
