--- a/app/src/main/res/layout/fragment_inform.xml
+++ b/app/src/main/res/layout/fragment_inform.xml
@@ -4,9 +4,12 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
     <FrameLayout
-        style="@style/title_title">
+        style="@style/title_title"
+        android:layout_height="@dimen/dp_45">
         <cn.czyugang.tcg.client.utils.img.ImgView
+            android:id="@+id/img_head"
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
             android:layout_gravity="left|center"
@@ -14,12 +17,13 @@
             android:background="@drawable/ic_placeholder"/>
         <android.support.design.widget.TabLayout
             android:id="@+id/inform_detail_tab"
-            android:layout_width="@dimen/dp_180"
+            android:layout_width="@dimen/dp_260"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             />
 
         <ImageView
+            android:id="@+id/img_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_search"
