资讯栏目界面、

--- a/app/src/main/res/layout/fragment_inform_follow.xml
+++ b/app/src/main/res/layout/fragment_inform_follow.xml
@@ -44,6 +44,8 @@
         android:id="@+id/column_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_0.5"
+        android:paddingTop="@dimen/dp_10"
         android:paddingLeft="@dimen/dp_10"
         android:paddingRight="@dimen/dp_10"
         android:paddingBottom="@dimen/dp_10"
@@ -51,7 +53,8 @@
         app:horizontal_spacing="@dimen/dp_8"
         app:vertical_spacing="@dimen/dp_10"
         android:background="@color/white"
-        android:visibility="gone"
+        android:visibility="visible"
+
         >
 
     </cn.czyugang.tcg.client.widget.LabelLayout>
@@ -71,7 +74,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/dp_10"
-        android:background="@color/white">
+
+        >
 
     </android.support.v7.widget.RecyclerView>
 
