--- a/app/src/main/res/layout/item_follow_list.xml
+++ b/app/src/main/res/layout/item_follow_list.xml
@@ -2,6 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_120"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingLeft="@dimen/dp_10"
+    android:paddingRight="@dimen/dp_10"
+    android:layout_marginTop="@dimen/dp_0.5"
+    android:background="@color/white"
     android:orientation="horizontal">
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -12,7 +17,9 @@
             android:id="@+id/follow_list_head"
             android:layout_width="@dimen/dp_20"
             android:layout_height="@dimen/dp_20"
-            android:layout_marginTop="@dimen/dp_15"/>
+            android:layout_marginTop="@dimen/dp_15"
+            app:round="true"
+            />
         <TextView
             android:id="@+id/follow_list_name"
             android:layout_width="wrap_content"
@@ -46,7 +53,6 @@
                 android:layout_marginLeft="@dimen/dp_5"
                 android:textColor="@color/text_gray"
                 android:textSize="@dimen/sp_12"
-
                 android:text="215"/>
 
         </LinearLayout>
@@ -96,6 +102,7 @@
         android:layout_width="@dimen/dp_120"
         android:layout_height="@dimen/dp_90"
         android:layout_gravity="center"/>
+
 
 
 </LinearLayout>
